# Workspace

./: #.gitignore#  .gitattributes  .gitignore  DecisionTree.7z  DecisionTree.gv  Grigra5.tgz  a.xml  arduinogcc.7z  configs.bz2  st-flash  st-util  summon-config  test  transdict.csv  words.txt
.metadata/: version.ini
6502_EhBASIC_V2.22/: Makefile.sin  basic.asm  basic.mon  min_mon.asm  rom.c
APLINKS/: .cproject  .project
ARM/: STM32F4Discovery_Demo.bz2  STM32F4Discovery_Test.tgz  STM32F4_SysTick_IO.bz2  STM32F4_library.bz2
ASCIIART_C/: .project
AVR/: ATtiny2313_Pmon090616a.c.html  AvrBuild.bat  Sample.fz  aupload.bat  avrasm2.bat  avrgcc.tgz  pepper090621.tgz
AVR_Based_SCSI_Ramdisk/: V0-0_Target_docu.pdf.bz2
AVR_TinyBasicPlus/: .cproject  .project  TinyBasicPlus.cpp
AbePyHubCover/: .project  Study3.py
AhoCorasic/: .cproject  .project  ACMachine.h  AhoCorasic.cpp
AlgorithmDesign/: .cproject  .output.autosave  .project  Makefile  a.out  data  datatype.h  jd.cpp  jd.cpp~  knapsack-dp.cc  ksubset.c  output  p4-2GHz-e2.log+  subsetenum  subsetenum-sparc  subsetenum.c  test  test2
AlgorithmDesign_Java/: .project
Arduino Home/: .cproject  .project
Arduino Home_libraries/: .cproject  .project
ArduinoLibraries/: .cproject  .project
as09-main/: .gitignore  .gitmodules  .project  AOUT_OUTPUT_SPEC.md  ASSERT_REPLACEMENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY_FIXES.md  as09.h  as09.tab.c  as09.tab.h  as09.y  decb.h  hello.asm  links.sh  test.asm
as09-main/.github/: copilot-instructions.md
as09-main/.github/workflows/: cmake.yml
(+12753 files in other folders)
